# openinsight

./: .env.example  .gitignore  AGENTS.md  CODEBASE_AUDIT_REPORT.md  COLAB_INGESTION_NOTEBOOK_B.md  ERRORS_SUMMARY.md  FIXES_SUMMARY.md  IMPLEMENTATION_CODE_PATCHES_A.md  MIGRATE_TO_REMOTE_EMB_RERANK.md  TASKS.md  UNFIXED_ISSUES.md  changelog.md  config.base.json  config.kaggle.json  config.production.json  docker-compose.yml  errors.md  mypy.ini  openinsight_phase2_agent_context.md  openinsight_table_fix_context.md  openmed_phase1_agent_context.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json  setup.sh
data/: .gitignore
docs/: 01_ARCHITECTURE.md  02_QUERY_PIPELINE.md  03_DEEPINSIGHTS_PIPELINE.md  04_DATA_INGESTION.md  DeepAgent.md  FRONTEND_CHANGES_NEEDED.md  GUIDE.md  MEDICAL_KNOWLEDGE_HARDCODED.md  PIPELINE_INTEGRATION.md  RERANKER_AND_PLATFORM_RESEARCH.md  SYSTEM_EVALUATION_MILVUS_V2.md
graphify-out/: GRAPH_REPORT.md  graph.html  graph.json  metadata.json
notebooks/: INGESTION_SUMMARY_FOR_CLAUDE.md  colab_ingestion.ipynb  kaggle_ingestion.ipynb  kaggle_ingestion.md  kaggle_ingestion.py
prompts/: query_rewrite.md  system.md
scripts/: maintainence.py  reingest_v2.py  run.py  seed_icmr.py  seed_indian_journals.py  seed_pubmed.py  verify_sites.py  zilliz_smoke.py
src/: __init__.py
tests/: __init__.py  conftest.py  test_answer_validation.py  test_chunker.py  test_constants.py  test_deduplication.py  test_embedding.py  test_fusion.py  test_indmed.py  test_medknow.py  test_mmr.py  test_ner.py  test_parsers.py  test_phase2_sources.py  (+13 more)
(+216 files in other folders)
